--- a/src/ch06/Makefile.in
+++ b/src/ch06/Makefile.in
@@ -78,13 +78,15 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-noinst_PROGRAMS = 00_basic$(EXEEXT) 01_parity$(EXEEXT) \
-	02_swap$(EXEEXT) 03_reverse$(EXEEXT) 04_find$(EXEEXT) \
-	05_multiply$(EXEEXT) 06_divide$(EXEEXT) 07_power$(EXEEXT) \
-	08_convert$(EXEEXT) 09_decode$(EXEEXT) 10_reverse$(EXEEXT) \
-	11_palindrome$(EXEEXT) 12_random$(EXEEXT) \
-	13_intersect$(EXEEXT) 14_open$(EXEEXT) 15_gcd$(EXEEXT)
-subdir = src/ch05
+noinst_PROGRAMS = 00_basic$(EXEEXT) 01_inplace$(EXEEXT) \
+	02_increment$(EXEEXT) 03_multiply$(EXEEXT) 04_check$(EXEEXT) \
+	05_remove$(EXEEXT) 06_unique$(EXEEXT) 07_find$(EXEEXT) \
+	08_max_diff$(EXEEXT) 09_max_diff$(EXEEXT) \
+	10_max_product$(EXEEXT) 11_lci$(EXEEXT) 12_primes$(EXEEXT) \
+	13_permute$(EXEEXT) 14_permute$(EXEEXT) 15_rotate$(EXEEXT) \
+	16_sample$(EXEEXT) 17_rand_permute$(EXEEXT) \
+	18_rand_subset$(EXEEXT)
+subdir = src/ch06
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(top_srcdir)/autoconf/depcomp
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -106,51 +108,60 @@ AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
 am__v_lt_0 = --silent
 am__v_lt_1 = 
-01_parity_SOURCES = 01_parity.c
-01_parity_OBJECTS = 01_parity.$(OBJEXT)
-01_parity_LDADD = $(LDADD)
-02_swap_SOURCES = 02_swap.c
-02_swap_OBJECTS = 02_swap.$(OBJEXT)
-02_swap_LDADD = $(LDADD)
-03_reverse_SOURCES = 03_reverse.c
-03_reverse_OBJECTS = 03_reverse.$(OBJEXT)
-03_reverse_LDADD = $(LDADD)
-04_find_SOURCES = 04_find.c
-04_find_OBJECTS = 04_find.$(OBJEXT)
-04_find_LDADD = $(LDADD)
-05_multiply_SOURCES = 05_multiply.c
-05_multiply_OBJECTS = 05_multiply.$(OBJEXT)
-05_multiply_LDADD = $(LDADD)
-06_divide_SOURCES = 06_divide.c
-06_divide_OBJECTS = 06_divide.$(OBJEXT)
-06_divide_LDADD = $(LDADD)
-07_power_SOURCES = 07_power.c
-07_power_OBJECTS = 07_power.$(OBJEXT)
-07_power_LDADD = $(LDADD)
-08_convert_SOURCES = 08_convert.c
-08_convert_OBJECTS = 08_convert.$(OBJEXT)
-08_convert_LDADD = $(LDADD)
-09_decode_SOURCES = 09_decode.c
-09_decode_OBJECTS = 09_decode.$(OBJEXT)
-09_decode_LDADD = $(LDADD)
-10_reverse_SOURCES = 10_reverse.c
-10_reverse_OBJECTS = 10_reverse.$(OBJEXT)
-10_reverse_LDADD = $(LDADD)
-11_palindrome_SOURCES = 11_palindrome.c
-11_palindrome_OBJECTS = 11_palindrome.$(OBJEXT)
-11_palindrome_LDADD = $(LDADD)
-12_random_SOURCES = 12_random.c
-12_random_OBJECTS = 12_random.$(OBJEXT)
-12_random_LDADD = $(LDADD)
-13_intersect_SOURCES = 13_intersect.c
-13_intersect_OBJECTS = 13_intersect.$(OBJEXT)
-13_intersect_LDADD = $(LDADD)
-14_open_SOURCES = 14_open.c
-14_open_OBJECTS = 14_open.$(OBJEXT)
-14_open_LDADD = $(LDADD)
-15_gcd_SOURCES = 15_gcd.c
-15_gcd_OBJECTS = 15_gcd.$(OBJEXT)
-15_gcd_LDADD = $(LDADD)
+am_01_inplace_OBJECTS = 01_inplace.$(OBJEXT)
+01_inplace_OBJECTS = $(am_01_inplace_OBJECTS)
+01_inplace_LDADD = $(LDADD)
+02_increment_SOURCES = 02_increment.c
+02_increment_OBJECTS = 02_increment.$(OBJEXT)
+02_increment_LDADD = $(LDADD)
+am_03_multiply_OBJECTS = 03_multiply.$(OBJEXT)
+03_multiply_OBJECTS = $(am_03_multiply_OBJECTS)
+03_multiply_LDADD = $(LDADD)
+am_04_check_OBJECTS = 04_check.$(OBJEXT)
+04_check_OBJECTS = $(am_04_check_OBJECTS)
+04_check_LDADD = $(LDADD)
+am_05_remove_OBJECTS = 05_remove.$(OBJEXT)
+05_remove_OBJECTS = $(am_05_remove_OBJECTS)
+05_remove_LDADD = $(LDADD)
+am_06_unique_OBJECTS = 06_unique.$(OBJEXT)
+06_unique_OBJECTS = $(am_06_unique_OBJECTS)
+06_unique_LDADD = $(LDADD)
+am_07_find_OBJECTS = 07_find.$(OBJEXT)
+07_find_OBJECTS = $(am_07_find_OBJECTS)
+07_find_LDADD = $(LDADD)
+am_08_max_diff_OBJECTS = 08_max_diff.$(OBJEXT)
+08_max_diff_OBJECTS = $(am_08_max_diff_OBJECTS)
+08_max_diff_LDADD = $(LDADD)
+am_09_max_diff_OBJECTS = 09_max_diff.$(OBJEXT)
+09_max_diff_OBJECTS = $(am_09_max_diff_OBJECTS)
+09_max_diff_LDADD = $(LDADD)
+am_10_max_product_OBJECTS = 10_max_product.$(OBJEXT)
+10_max_product_OBJECTS = $(am_10_max_product_OBJECTS)
+10_max_product_LDADD = $(LDADD)
+am_11_lci_OBJECTS = 11_lci.$(OBJEXT)
+11_lci_OBJECTS = $(am_11_lci_OBJECTS)
+11_lci_LDADD = $(LDADD)
+am_12_primes_OBJECTS = 12_primes.$(OBJEXT)
+12_primes_OBJECTS = $(am_12_primes_OBJECTS)
+12_primes_LDADD = $(LDADD)
+am_13_permute_OBJECTS = 13_permute.$(OBJEXT)
+13_permute_OBJECTS = $(am_13_permute_OBJECTS)
+13_permute_LDADD = $(LDADD)
+am_14_permute_OBJECTS = 14_permute.$(OBJEXT)
+14_permute_OBJECTS = $(am_14_permute_OBJECTS)
+14_permute_LDADD = $(LDADD)
+am_15_rotate_OBJECTS = 15_rotate.$(OBJEXT)
+15_rotate_OBJECTS = $(am_15_rotate_OBJECTS)
+15_rotate_LDADD = $(LDADD)
+am_16_sample_OBJECTS = 16_sample.$(OBJEXT)
+16_sample_OBJECTS = $(am_16_sample_OBJECTS)
+16_sample_LDADD = $(LDADD)
+am_17_rand_permute_OBJECTS = 17_rand_permute.$(OBJEXT)
+17_rand_permute_OBJECTS = $(am_17_rand_permute_OBJECTS)
+17_rand_permute_LDADD = $(LDADD)
+am_18_rand_subset_OBJECTS = 18_rand_subset.$(OBJEXT)
+18_rand_subset_OBJECTS = $(am_18_rand_subset_OBJECTS)
+18_rand_subset_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -203,14 +214,24 @@ AM_V_CXXLD = $(am__v_CXXLD_@AM_V@)
 am__v_CXXLD_ = $(am__v_CXXLD_@AM_DEFAULT_V@)
 am__v_CXXLD_0 = @echo "  CXXLD   " $@;
 am__v_CXXLD_1 = 
-SOURCES = $(00_basic_SOURCES) 01_parity.c 02_swap.c 03_reverse.c \
-	04_find.c 05_multiply.c 06_divide.c 07_power.c 08_convert.c \
-	09_decode.c 10_reverse.c 11_palindrome.c 12_random.c \
-	13_intersect.c 14_open.c 15_gcd.c
-DIST_SOURCES = $(00_basic_SOURCES) 01_parity.c 02_swap.c 03_reverse.c \
-	04_find.c 05_multiply.c 06_divide.c 07_power.c 08_convert.c \
-	09_decode.c 10_reverse.c 11_palindrome.c 12_random.c \
-	13_intersect.c 14_open.c 15_gcd.c
+SOURCES = $(00_basic_SOURCES) $(01_inplace_SOURCES) 02_increment.c \
+	$(03_multiply_SOURCES) $(04_check_SOURCES) \
+	$(05_remove_SOURCES) $(06_unique_SOURCES) $(07_find_SOURCES) \
+	$(08_max_diff_SOURCES) $(09_max_diff_SOURCES) \
+	$(10_max_product_SOURCES) $(11_lci_SOURCES) \
+	$(12_primes_SOURCES) $(13_permute_SOURCES) \
+	$(14_permute_SOURCES) $(15_rotate_SOURCES) \
+	$(16_sample_SOURCES) $(17_rand_permute_SOURCES) \
+	$(18_rand_subset_SOURCES)
+DIST_SOURCES = $(00_basic_SOURCES) $(01_inplace_SOURCES) \
+	02_increment.c $(03_multiply_SOURCES) $(04_check_SOURCES) \
+	$(05_remove_SOURCES) $(06_unique_SOURCES) $(07_find_SOURCES) \
+	$(08_max_diff_SOURCES) $(09_max_diff_SOURCES) \
+	$(10_max_product_SOURCES) $(11_lci_SOURCES) \
+	$(12_primes_SOURCES) $(13_permute_SOURCES) \
+	$(14_permute_SOURCES) $(15_rotate_SOURCES) \
+	$(16_sample_SOURCES) $(17_rand_permute_SOURCES) \
+	$(18_rand_subset_SOURCES)
 am__can_run_installinfo = \
   case $$AM_UPDATE_INFO_DIR in \
     n|no|NO) false;; \
@@ -370,6 +391,57 @@ AM_CPPFLAGS = \
 00_basic_SOURCES = \
 	00_basic.cpp
 
+01_inplace_SOURCES = \
+	01_inplace.cpp
+
+03_multiply_SOURCES = \
+	03_multiply.cpp
+
+04_check_SOURCES = \
+	04_check.cpp
+
+05_remove_SOURCES = \
+	05_remove.cpp
+
+06_unique_SOURCES = \
+	06_unique.cpp
+
+07_find_SOURCES = \
+	07_find.cpp
+
+08_max_diff_SOURCES = \
+	08_max_diff.cpp
+
+09_max_diff_SOURCES = \
+	09_max_diff.cpp
+
+10_max_product_SOURCES = \
+	10_max_product.cpp
+
+11_lci_SOURCES = \
+	11_lci.cpp
+
+12_primes_SOURCES = \
+	12_primes.cpp
+
+13_permute_SOURCES = \
+	13_permute.cpp
+
+14_permute_SOURCES = \
+	14_permute.cpp
+
+15_rotate_SOURCES = \
+	15_rotate.cpp
+
+16_sample_SOURCES = \
+	16_sample.cpp
+
+17_rand_permute_SOURCES = \
+	17_rand_permute.cpp
+
+18_rand_subset_SOURCES = \
+	18_rand_subset.cpp
+
 all: all-am
 
 .SUFFIXES:
@@ -383,9 +455,9 @@ $(srcdir)/Makefile.in:  $(srcdir)/Makefile.am  $(am__configure_deps)
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu src/ch05/Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu src/ch06/Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu src/ch05/Makefile
+	  $(AUTOMAKE) --gnu src/ch06/Makefile
 .PRECIOUS: Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
@@ -418,65 +490,77 @@ clean-noinstPROGRAMS:
 	@rm -f 00_basic$(EXEEXT)
 	$(AM_V_CXXLD)$(CXXLINK) $(00_basic_OBJECTS) $(00_basic_LDADD) $(LIBS)
 
-01_parity$(EXEEXT): $(01_parity_OBJECTS) $(01_parity_DEPENDENCIES) $(EXTRA_01_parity_DEPENDENCIES) 
-	@rm -f 01_parity$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(01_parity_OBJECTS) $(01_parity_LDADD) $(LIBS)
+01_inplace$(EXEEXT): $(01_inplace_OBJECTS) $(01_inplace_DEPENDENCIES) $(EXTRA_01_inplace_DEPENDENCIES) 
+	@rm -f 01_inplace$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(01_inplace_OBJECTS) $(01_inplace_LDADD) $(LIBS)
 
-02_swap$(EXEEXT): $(02_swap_OBJECTS) $(02_swap_DEPENDENCIES) $(EXTRA_02_swap_DEPENDENCIES) 
-	@rm -f 02_swap$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(02_swap_OBJECTS) $(02_swap_LDADD) $(LIBS)
+02_increment$(EXEEXT): $(02_increment_OBJECTS) $(02_increment_DEPENDENCIES) $(EXTRA_02_increment_DEPENDENCIES) 
+	@rm -f 02_increment$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(02_increment_OBJECTS) $(02_increment_LDADD) $(LIBS)
 
-03_reverse$(EXEEXT): $(03_reverse_OBJECTS) $(03_reverse_DEPENDENCIES) $(EXTRA_03_reverse_DEPENDENCIES) 
-	@rm -f 03_reverse$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(03_reverse_OBJECTS) $(03_reverse_LDADD) $(LIBS)
+03_multiply$(EXEEXT): $(03_multiply_OBJECTS) $(03_multiply_DEPENDENCIES) $(EXTRA_03_multiply_DEPENDENCIES) 
+	@rm -f 03_multiply$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(03_multiply_OBJECTS) $(03_multiply_LDADD) $(LIBS)
 
-04_find$(EXEEXT): $(04_find_OBJECTS) $(04_find_DEPENDENCIES) $(EXTRA_04_find_DEPENDENCIES) 
-	@rm -f 04_find$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(04_find_OBJECTS) $(04_find_LDADD) $(LIBS)
+04_check$(EXEEXT): $(04_check_OBJECTS) $(04_check_DEPENDENCIES) $(EXTRA_04_check_DEPENDENCIES) 
+	@rm -f 04_check$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(04_check_OBJECTS) $(04_check_LDADD) $(LIBS)
 
-05_multiply$(EXEEXT): $(05_multiply_OBJECTS) $(05_multiply_DEPENDENCIES) $(EXTRA_05_multiply_DEPENDENCIES) 
-	@rm -f 05_multiply$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(05_multiply_OBJECTS) $(05_multiply_LDADD) $(LIBS)
+05_remove$(EXEEXT): $(05_remove_OBJECTS) $(05_remove_DEPENDENCIES) $(EXTRA_05_remove_DEPENDENCIES) 
+	@rm -f 05_remove$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(05_remove_OBJECTS) $(05_remove_LDADD) $(LIBS)
 
-06_divide$(EXEEXT): $(06_divide_OBJECTS) $(06_divide_DEPENDENCIES) $(EXTRA_06_divide_DEPENDENCIES) 
-	@rm -f 06_divide$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(06_divide_OBJECTS) $(06_divide_LDADD) $(LIBS)
+06_unique$(EXEEXT): $(06_unique_OBJECTS) $(06_unique_DEPENDENCIES) $(EXTRA_06_unique_DEPENDENCIES) 
+	@rm -f 06_unique$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(06_unique_OBJECTS) $(06_unique_LDADD) $(LIBS)
 
-07_power$(EXEEXT): $(07_power_OBJECTS) $(07_power_DEPENDENCIES) $(EXTRA_07_power_DEPENDENCIES) 
-	@rm -f 07_power$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(07_power_OBJECTS) $(07_power_LDADD) $(LIBS)
+07_find$(EXEEXT): $(07_find_OBJECTS) $(07_find_DEPENDENCIES) $(EXTRA_07_find_DEPENDENCIES) 
+	@rm -f 07_find$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(07_find_OBJECTS) $(07_find_LDADD) $(LIBS)
 
-08_convert$(EXEEXT): $(08_convert_OBJECTS) $(08_convert_DEPENDENCIES) $(EXTRA_08_convert_DEPENDENCIES) 
-	@rm -f 08_convert$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(08_convert_OBJECTS) $(08_convert_LDADD) $(LIBS)
+08_max_diff$(EXEEXT): $(08_max_diff_OBJECTS) $(08_max_diff_DEPENDENCIES) $(EXTRA_08_max_diff_DEPENDENCIES) 
+	@rm -f 08_max_diff$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(08_max_diff_OBJECTS) $(08_max_diff_LDADD) $(LIBS)
 
-09_decode$(EXEEXT): $(09_decode_OBJECTS) $(09_decode_DEPENDENCIES) $(EXTRA_09_decode_DEPENDENCIES) 
-	@rm -f 09_decode$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(09_decode_OBJECTS) $(09_decode_LDADD) $(LIBS)
+09_max_diff$(EXEEXT): $(09_max_diff_OBJECTS) $(09_max_diff_DEPENDENCIES) $(EXTRA_09_max_diff_DEPENDENCIES) 
+	@rm -f 09_max_diff$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(09_max_diff_OBJECTS) $(09_max_diff_LDADD) $(LIBS)
 
-10_reverse$(EXEEXT): $(10_reverse_OBJECTS) $(10_reverse_DEPENDENCIES) $(EXTRA_10_reverse_DEPENDENCIES) 
-	@rm -f 10_reverse$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(10_reverse_OBJECTS) $(10_reverse_LDADD) $(LIBS)
+10_max_product$(EXEEXT): $(10_max_product_OBJECTS) $(10_max_product_DEPENDENCIES) $(EXTRA_10_max_product_DEPENDENCIES) 
+	@rm -f 10_max_product$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(10_max_product_OBJECTS) $(10_max_product_LDADD) $(LIBS)
 
-11_palindrome$(EXEEXT): $(11_palindrome_OBJECTS) $(11_palindrome_DEPENDENCIES) $(EXTRA_11_palindrome_DEPENDENCIES) 
-	@rm -f 11_palindrome$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(11_palindrome_OBJECTS) $(11_palindrome_LDADD) $(LIBS)
+11_lci$(EXEEXT): $(11_lci_OBJECTS) $(11_lci_DEPENDENCIES) $(EXTRA_11_lci_DEPENDENCIES) 
+	@rm -f 11_lci$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(11_lci_OBJECTS) $(11_lci_LDADD) $(LIBS)
 
-12_random$(EXEEXT): $(12_random_OBJECTS) $(12_random_DEPENDENCIES) $(EXTRA_12_random_DEPENDENCIES) 
-	@rm -f 12_random$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(12_random_OBJECTS) $(12_random_LDADD) $(LIBS)
+12_primes$(EXEEXT): $(12_primes_OBJECTS) $(12_primes_DEPENDENCIES) $(EXTRA_12_primes_DEPENDENCIES) 
+	@rm -f 12_primes$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(12_primes_OBJECTS) $(12_primes_LDADD) $(LIBS)
 
-13_intersect$(EXEEXT): $(13_intersect_OBJECTS) $(13_intersect_DEPENDENCIES) $(EXTRA_13_intersect_DEPENDENCIES) 
-	@rm -f 13_intersect$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(13_intersect_OBJECTS) $(13_intersect_LDADD) $(LIBS)
+13_permute$(EXEEXT): $(13_permute_OBJECTS) $(13_permute_DEPENDENCIES) $(EXTRA_13_permute_DEPENDENCIES) 
+	@rm -f 13_permute$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(13_permute_OBJECTS) $(13_permute_LDADD) $(LIBS)
 
-14_open$(EXEEXT): $(14_open_OBJECTS) $(14_open_DEPENDENCIES) $(EXTRA_14_open_DEPENDENCIES) 
-	@rm -f 14_open$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(14_open_OBJECTS) $(14_open_LDADD) $(LIBS)
+14_permute$(EXEEXT): $(14_permute_OBJECTS) $(14_permute_DEPENDENCIES) $(EXTRA_14_permute_DEPENDENCIES) 
+	@rm -f 14_permute$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(14_permute_OBJECTS) $(14_permute_LDADD) $(LIBS)
 
-15_gcd$(EXEEXT): $(15_gcd_OBJECTS) $(15_gcd_DEPENDENCIES) $(EXTRA_15_gcd_DEPENDENCIES) 
-	@rm -f 15_gcd$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(15_gcd_OBJECTS) $(15_gcd_LDADD) $(LIBS)
+15_rotate$(EXEEXT): $(15_rotate_OBJECTS) $(15_rotate_DEPENDENCIES) $(EXTRA_15_rotate_DEPENDENCIES) 
+	@rm -f 15_rotate$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(15_rotate_OBJECTS) $(15_rotate_LDADD) $(LIBS)
+
+16_sample$(EXEEXT): $(16_sample_OBJECTS) $(16_sample_DEPENDENCIES) $(EXTRA_16_sample_DEPENDENCIES) 
+	@rm -f 16_sample$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(16_sample_OBJECTS) $(16_sample_LDADD) $(LIBS)
+
+17_rand_permute$(EXEEXT): $(17_rand_permute_OBJECTS) $(17_rand_permute_DEPENDENCIES) $(EXTRA_17_rand_permute_DEPENDENCIES) 
+	@rm -f 17_rand_permute$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(17_rand_permute_OBJECTS) $(17_rand_permute_LDADD) $(LIBS)
+
+18_rand_subset$(EXEEXT): $(18_rand_subset_OBJECTS) $(18_rand_subset_DEPENDENCIES) $(EXTRA_18_rand_subset_DEPENDENCIES) 
+	@rm -f 18_rand_subset$(EXEEXT)
+	$(AM_V_CXXLD)$(CXXLINK) $(18_rand_subset_OBJECTS) $(18_rand_subset_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -485,21 +569,24 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/00_basic.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/01_parity.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/02_swap.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/03_reverse.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/04_find.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/05_multiply.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/06_divide.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/07_power.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/08_convert.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/09_decode.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/10_reverse.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/11_palindrome.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/12_random.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/13_intersect.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/14_open.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/15_gcd.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/01_inplace.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/02_increment.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/03_multiply.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/04_check.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/05_remove.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/06_unique.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/07_find.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/08_max_diff.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/09_max_diff.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/10_max_product.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/11_lci.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/12_primes.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/13_permute.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/14_permute.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/15_rotate.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/16_sample.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/17_rand_permute.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/18_rand_subset.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	$(AM_V_CC)$(COMPILE) -MT $@ -MD -MP -MF $(DEPDIR)/$*.Tpo -c -o $@ $<
